Implement email verification API && Design DB
