# db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.24.0
+//   sqlc v1.25.0
 
 package db
 
@@ -53,4 +53,15 @@ type Users struct {
 	Email             string    `json:"email"`
 	PasswordChangedAt time.Time `json:"passwordChangedAt"`
 	CreatedAt         time.Time `json:"createdAt"`
+	IsVerifiedEmail   bool      `json:"isVerifiedEmail"`
+}
+
+type VerifyEmails struct {
+	ID         int64     `json:"id"`
+	Username   string    `json:"username"`
+	Email      string    `json:"email"`
+	SecretCode string    `json:"secretCode"`
+	IsUsed     bool      `json:"isUsed"`
+	CreatedAt  time.Time `json:"createdAt"`
+	ExpiredAt  time.Time `json:"expiredAt"`
 }
