# gapi/grpc_server.go
@@ -3,6 +3,7 @@ package gapi
 import (
 	"fmt"
 	db "github.com/ngohoang211020/simplebank/db/sqlc"
+	"github.com/ngohoang211020/simplebank/mail"
 	pb "github.com/ngohoang211020/simplebank/pb/user"
 	"github.com/ngohoang211020/simplebank/token"
 	"github.com/ngohoang211020/simplebank/util"
@@ -16,10 +17,11 @@ type GrpcServer struct {
 	tokenMaker token.Maker
 	pb.UnimplementedSimpleBankServer
 	distributor worker.TaskDistributor
+	mail        mail.EmailSender
 }
 
 // NewGrpcServer creates a new gRPC server
-func NewGrpcServer(config *util.Configuration, store db.Store, distributor worker.TaskDistributor) (*GrpcServer, error) {
+func NewGrpcServer(config *util.Configuration, store db.Store, distributor worker.TaskDistributor, mail mail.EmailSender) (*GrpcServer, error) {
 	tokenMaker, err := token.NewPasetoMaker(config.TokenSymmetricKey)
 	if err != nil {
 		return nil, fmt.Errorf("cannot create token maker: %w", err)
@@ -29,6 +31,7 @@ func NewGrpcServer(config *util.Configuration, store db.Store, distributor worke
 		tokenMaker:  tokenMaker,
 		config:      config,
 		distributor: distributor,
+		mail:        mail,
 	}
 	return server, nil
 }
